add_executable(helloTriangle helloTriangle.cpp)
target_link_libraries(helloTriangle PUBLIC tga_vulkan tga_utils ${CMAKE_THREAD_LIBS_INIT})
add_dependencies(helloTriangle example_shaders)
if(WIN32)
    set_property(TARGET helloTriangle PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${EXAMPLES_WORKING_DIR}")
endif(WIN32)
